# MO

./: CMakeLists.txt
lab_1/: main.cpp
lab_10/: BMEErrors.txt  BMEErrorsPlot.plt  BMEStablefunctionPlot.plt  BMEUnstablefunctionPlot.plt  BME_stable.txt  BME_unstable.txt  CMakeLists.txt  Errors.txt  ErrorsPlot.plt  PME.txt  PMEErrors.txt  PMEErrorsPlot.plt  PMEfunctionPlot.plt  PMT.txt  PMTErrors.txt  PMTErrorsPlot.plt  PMTfunctionPlot.plt  main.cpp
lab_11/: CMakeLists.txt  LU.cpp  LU.h  Thomas.cpp  Thomas.h  calerf.cpp  main.cpp
lab_11/KMB/: KMB_error.txt  KMB_error_time.txt  KMB_functions.txt  plot_KMB_error.plt  plot_KMB_error_time.plt  plot_KMB_functions.plt  plot_tmp.plt  tmp.txt
lab_11/PMCN/: PMCN_THOMAS_error.txt  PMCN_THOMAS_error_time.txt  PMCN_THOMAS_functions.txt  PMCN_error.txt  plot_KMB_error.plt  (+3 more)
lab_12/: CMakeLists.txt  czebyszew.txt  function.txt  main.cpp  normal.txt  script.plt
lab_2/: main.cpp  relative_erros_fixed.txt
lab_3/: CMakeLists.txt  main.cpp
lab_4/: CMakeLists.txt  main.cpp
lab_5/: CMakeLists.txt  MatrixPrinter.cpp  MatrixPrinter.h  main.cpp
lab_6/: CMakeLists.txt  MatrixPrinter.cpp  MatrixPrinter.h  main.cpp
lab_7/: CMakeLists.txt  gSeidel  jacobi  main.cpp  sor
lab_8/: CMakeLists.txt  command  main.cpp
lab_9/: CMakeLists.txt  conErr.txt  conFun.txt  functionPlot.plt  main.cpp  numErr.txt  numFun.txt  plotScript.plt  plotScript.txt
zad_1/: CMakeLists.txt  main.cpp
zad_2/: CMakeLists.txt  approximate_result.txt  fixed_result.txt  main.cpp  relative_erros_approx.txt  relative_erros_fixed.txt
(+7 files in other folders)
