cmake_minimum_required(VERSION 3.15)

add_subdirectory(lab_2)

add_subdirectory(lab_1)

add_subdirectory(lab_3)

add_subdirectory(lab_4)

add_subdirectory(lab_5)

add_subdirectory(lab_6)

add_subdirectory(lab_7)

add_subdirectory(lab_8)

add_subdirectory(lab_9)

add_subdirectory(lab_10)

add_subdirectory(lab_11)